syntax = "proto3";

package product.v1;

option go_package = "github.com/abgdnv/gocommerce/pkg/api/gen/go/product/v1;product_v1";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  repeated string products = 1;
}

message GetProductResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  int64 price = 3;
  int32 stock_quantity = 4;
  int32 version = 5;
}
